[tool.poetry]
name = "stemmaweb_middleware"
version = "0.1.0"
description = "Middleware for Stemmaweb handling authentication and passthrough to Stemmarest"
authors = ["Péter Ferenc Gyarmati <dev.petergy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pydantic = "^1.10.2"
gunicorn = "^20.1.0"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
