[tool.poetry]
name = "stemmaweb_middleware"
version = "0.1.0"
description = "Middleware for Stemmaweb handling authentication and passthrough to Stemmarest"
authors = ["Péter Ferenc Gyarmati <dev.petergy@gmail.com>"]
repository = "https://github.com/tla/stemmaweb"
exclude = ["tests/*"]
readme = "README.md"
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
environs = "^9.5.0"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
pydantic = "^1.10.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^5.2"
pytype = "^2022.9.27"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["stemmaweb_middleware"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
