[tool.poetry]
name = "stemmaweb_middleware"
version = "0.1.0"
description = "Middleware for Stemmaweb handling authentication and passthrough to Stemmarest"
authors = ["Péter Ferenc Gyarmati <dev.petergy@gmail.com>"]
repository = "https://github.com/tla/stemmaweb"
exclude = ["tests/*"]
readme = "README.md"
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.10"
authlib = "^1.2.1"
email-validator = "^2.1.0.post1"
environs = "^9.5.0"
Flask = "^2.3.3"
flask-login = "^0.6.3"
gunicorn = "^21.2.0"
pydantic = "^2.4.2"
requests = "^2.31.0"
Werkzeug = "^3.0.1"
loguru = "^0.7.2"
Flask-Cors = "^3.0.10"
schedule = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytype = "^2023.10.31"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core^1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["stemmaweb_middleware"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
