[tool.poetry]
name = "stemmaweb_middleware"
version = "0.1.0"
description = "Middleware for Stemmaweb handling authentication and passthrough to Stemmarest"
authors = ["Péter Ferenc Gyarmati <dev.petergy@gmail.com>"]
repository = "https://github.com/tla/stemmaweb"
exclude = ["tests/*"]
readme = "README.md"
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Authlib = "^1.5.2"
email-validator = "^2.2.0"
environs = "^14.1.1"
Flask = "^3.1.0"
Flask-Login = "^0.6.3"
gunicorn = "^23.0.0"
pydantic = "^2.11.3"
requests = "^2.32.3"
Werkzeug = "^3.1.3"
loguru = "^0.7.3"
flask-cors = "^5.0.1"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-black = "^0.3.6"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytype = "^2024.10.11"
types-requests = "^2.32.0.20250328"

[build-system]
requires = ["poetry-core (>=2.0.0)"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["stemmaweb_middleware"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
